--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.db filter=lfs diff=lfs merge=lfs -text
 *.unity filter=lfs diff=lfs merge=lfs -text
+*.db*.unity filter=lfs diff=lfs merge=lfs -text
